--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,21 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
+  condition: succeeded()
+  
+  task: DotNetCoreCLI@2
+  displayName: 'Pack the project - $(buildConfiguration)'
+  inputs:
+    command: 'pack'
+    projects: '**/*.csproj'
+    arguments: '--no-build --configuration $(buildConfiguration)'
+    versioningScheme: byPrereleaseNumber
+    majorVersion: '1'
+    minorVersion: '0'
+    patchVersion: '0'
+ 
+- task: NuGetCommand@2
+  displayName: 'Publish NuGet package'
   inputs:
     command: push
     publishVstsFeed: 'SpaceGame-web-Dependencies/Tailspin.SpaceGame.Web'
